# some_sort_of_game_engine

./: .gitignore  Makefile.am  README.md  SOCIAL_EXPECTATIONS.md  configure.ac
dev-util/gen_vulkan_util_hpp/: README.md  gen_vulkan_util_hpp  lib.rb
doc/: Doxyfile  custom.css  main_page.md
examples/circ/: main.comp
include/: bin_data.hpp  bin_file.hpp  binary_semaphore.hpp  cli.hpp  command_buffer.hpp  command_pool.hpp  compute_pipeline.hpp  debug_msgr.hpp  descriptor_binding.hpp  descriptor_pool.hpp  descriptor_set_layout.hpp  descriptor_set_layout_binding.hpp  device.hpp  deviced.hpp  engine.hpp  fence.hpp  game.hpp  heap.hpp  iec_ibyte.hpp  image.hpp  image_format.hpp  image_view.hpp  instance.hpp  log.hpp  logi_device.hpp  memory_heap.hpp  memory_type.hpp  pc_range.hpp  phys_device.hpp  phys_devices.hpp  physical_heap.hpp  pipeline_layout.hpp  push_constants.hpp  queue_family.hpp  sdl.hpp  semaphore.hpp  shader_module.hpp  surface.hpp  swapchain.hpp  timeline_semaphore.hpp  (+3 more)
m4/: cxx20.m4
src/: bin_data.cpp  bin_file.cpp  binary_semaphore.cpp  cli.cpp  command_buffer.cpp  command_pool.cpp  compute_pipeline.cpp  debug_msgr.cpp  descriptor_binding.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  descriptor_set_layout_binding.cpp  device.cpp  engine.cpp  fence.cpp  heap.cpp  image.cpp  image_format.cpp  image_view.cpp  instance.cpp  log.cpp  logi_device.cpp  main.cpp  phys_device.cpp  phys_devices.cpp  pipeline_layout.cpp  queue_family.cpp  sdl.cpp  semaphore.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  timeline_semaphore.cpp  vulkan.cpp  window.cpp
test/: bin_data.cpp  bin_file.cpp  vulkan_integ.cpp
